dark mode fixed

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* Resets */
 * {
     margin: 0;
     padding: 0;
@@ -10,13 +11,14 @@
     --text-color: hsla(var(--hue), 40%, 90%, 1);
     --primary-color: hsl(var(--hue), 100%, 63%);
     --controls-bg-color: hsl(var(--hue), 0%, 14%);
-    --button-secondary: hsla(var(--hue), 40%, 90%, 1);
+    --button-secondary: hsl(var(--hue), 40%, 90%);
 
     font-size: clamp(40%, 1% +2vw, 62.5%)
 }
 
+/* HTML */ 
 html.light {
-    --bg-color: hsla(var(--hue), 40%, 90%, 1);
+    --bg-color: hsl(var(--hue), 40%, 98%);
     --text-color: hsl(var(--hue), 5%, 7%);
 }
 
@@ -28,15 +30,17 @@ html:not(.light) .ph-moon {
 #toggleMode {
     position: absolute;
     right: 3.2rem;
-    top:3.2rem;
+    top: 3.2rem;
+
+    color: var(--text-color);
     font-size: 3.2rem;
     line-height: 0;
-    color: var(--text-color)
 }
 
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
+
     display: grid;
     height: 100vh;
     place-content: center;
@@ -52,23 +56,25 @@ body {
 }
 
 #timer {
+    padding-left: 2.4rem;
     font-size: 9.6rem;
     font-weight: bold;
     font-family: sans-serif;
 }
 
 #controls {
+    background-color: var(--controls-bg-color);
     margin-top: 1.6rem;
     padding: 2.2rem 4rem;
     gap: 1.6rem;
-    background-color: var(--controls-bg-color);
     border-radius: 999rem;
 }
 
 button {
     background-color: transparent;
-    border: 0;
     color: var(--primary-color);
+    border: 0;
+
     cursor: pointer;
     font-size: 6.4rem;
 }
@@ -77,6 +83,7 @@ button {
     color:var(--button-secondary);
 }
 
+/* controls */
 .running .ph-play-circle, 
 .running .ph-timer,
 .musicOn .ph-speaker-none,
@@ -84,4 +91,17 @@ html:not(.running) .ph-pause-circle,
 html:not(.running) .ph-stop-circle,
 html:not(.musicOn) .ph-speaker-high {
     display: none;
+}
+
+/* screen reader only */ 
+.srOnly {
+    width: 1px;
+    height: 1px;
+    position: absolute;
+    overflow: hidden;
+
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    appearance: none;
 }
